# Siaod-2023

./: LICENSE
Task2/: CMakeLists.txt  NumbersForFirstTask  Students.h  main.cpp
Task2/BinaryFileManager/: BinaryFileManager.cpp  BinaryFileManager.h  Student.h
Task2/FileManager/: Filemanager.cpp  Filemanager.h
Task2/UI/: UI.cpp  UI.h
Task3/: CMakeLists.txt  main.cpp
Task3/FileService/: FileService.cpp  FileService.h
Task3/HashTableFileManagerService/: HashTableFileManager.cpp  HashTableFileManager.h
Task3/HashTableService/: HashTable.cpp  HashTable.h
Task3/Model/: HashTableElement.h  Student.h
Task3/Tests/: FileSystemTests.h  HashTableFileManagerTests.h  HashTableTests.h
task1/: CMakeLists.txt  main.cpp
task1/Headers/: FirstTask.h  MergeSort.h
task4/: CMakeLists.txt  a.out  main.cpp
task5/: CMakeLists.txt  main.cpp
task5/BinaryFileManager/: BinaryFileManager.cpp  BinaryFileManager.h
task5/BinaryTree/: BinaryTree.cpp  BinaryTree.h  Record.h
task5/BinaryTreeService/: BinaryTreeService.cpp  BinaryTreeService.h
task5/SplayTree/: Node.h  SplayTree.cpp  SplayTree.h
task5/SplayTreeService/: SplayTreeService.cpp  SplayTreeService.h  TreePrinter.h
task5/Tests/BinaryTreeTests/: BinaryTreeTests.cpp  BinaryTreeTests.h
task5/Tests/PerfomanceTest/: SplayTreePerfomanceTest.cpp  SplayTreePerfomanceTest.h
task5/Tests/SplayTreeTests/: SplayTreeTests.cpp  SplayTreeTests.h
task6/: CMakeLists.txt  main.cpp
task6/ColorizeGraph/: ColorizeGraph.cpp  ColorizeGraph.h
task7/: CMakeLists.txt  main.cpp
task8/: CMakeLists.txt  LZ.h  LZ77.h  RLE.h  main.cpp  shannonFano.h
